--- a/site.yml
+++ b/site.yml
@@ -8,15 +8,15 @@
 - include: playbooks/install_haproxy.yml
 - include: playbooks/install_ntp.yml
 - include: playbooks/install_docker.yml
-- include: playbooks/config_rsyslog.yml
-- include: playbooks/config_lvs.yml
-- include: playbooks/start_docker.yml
-- include: playbooks/docker_post_config.yml
-- include: playbooks/install_nfs_server.yml
-- include: playbooks/install_nfs_clients.yml
-- include: playbooks/install_ucp_nodes.yml
-- include: playbooks/install_dtr_nodes.yml
-- include: playbooks/install_worker_nodes.yml
-- include: playbooks/config_monitoring.yml
-- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
-- include: playbooks/config_simplivity_backups.yml
+#- include: playbooks/config_rsyslog.yml
+#- include: playbooks/config_lvs.yml
+#- include: playbooks/start_docker.yml
+#- include: playbooks/docker_post_config.yml
+#- include: playbooks/install_nfs_server.yml
+#- include: playbooks/install_nfs_clients.yml
+#- include: playbooks/install_ucp_nodes.yml
+#- include: playbooks/install_dtr_nodes.yml
+#- include: playbooks/install_worker_nodes.yml
+#- include: playbooks/config_monitoring.yml
+#- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
+#- include: playbooks/config_simplivity_backups.yml
