added environment env line to all playbooks

--- a/playbooks/config_lvs.yml
+++ b/playbooks/config_lvs.yml
@@ -7,6 +7,8 @@
   vars_files:
     - ../group_vars/vars
 
+  environment: "{{ env }}"
+
   tasks:
     - name: Create partition on second disk
       parted:
