--- a/playbooks/install_worker_nodes.yml
+++ b/playbooks/install_worker_nodes.yml
@@ -7,6 +7,8 @@
   vars_files:
     - ../group_vars/vars
 
+  environment: "{{ env }}"
+
   tasks:
     - name: Open required ports for Workers
       command: firewall-cmd --permanent --zone=public --add-port=443/tcp --add-port=2377/tcp --add-port=4789/tcp --add-port=4789/udp --add-port=7946/tcp --add-port=7946/udp --add-port=12376/tcp
