--- a/playbooks/config_networking.yml
+++ b/playbooks/config_networking.yml
@@ -7,6 +7,8 @@
   vars_files:
     - ../group_vars/vars
     - ../group_vars/vault
+  
+  environment: "{{ env }}"
 
   tasks:
     - name: Change hostname
