--- a/playbooks/create_vms.yml
+++ b/playbooks/create_vms.yml
@@ -8,6 +8,8 @@
   vars_files:
     - ../group_vars/vars
     - ../group_vars/vault
+  
+  environment: "{{ env }}"
 
   tasks:
     - name: Create all VMs
