--- a/playbooks/install_dtr_nodes.yml
+++ b/playbooks/install_dtr_nodes.yml
@@ -7,6 +7,8 @@
   vars_files:
     - ../group_vars/vars
     - ../group_vars/vault
+  
+  environment: "{{ env }}"
 
   vars:
     dtr_lb: "{{ groups['dtr_lb'][0] }}.{{ domain_name }}"
