--- a/playbooks/start_docker.yml
+++ b/playbooks/start_docker.yml
@@ -7,6 +7,8 @@
   vars_files:
     - ../group_vars/vars
 
+  environment: "{{ env }}"
+
   tasks:
     - name: Enable and start docker service
       systemd:
