--- a/site.yml
+++ b/site.yml
@@ -17,6 +17,6 @@
 - include: playbooks/install_ucp_nodes.yml
 - include: playbooks/install_dtr_nodes.yml
 - include: playbooks/install_worker_nodes.yml
-- include: playbooks/config_monitoring.yml
-#- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
-#- include: playbooks/config_simplivity_backups.yml
+##- include: playbooks/config_monitoring.yml
+- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
+- include: playbooks/config_simplivity_backups.yml
