new config to prevent data corruption docker 2nd disk and our nfs server as parted module has a bug

--- a/files/elk/elk-docker-compose.yml
+++ b/files/elk/elk-docker-compose.yml
@@ -18,6 +18,8 @@ services:
     image: docker.elastic.co/logstash/logstash:5.4.2_hpe
     depends_on:
       - elasticsearch
+    ports:
+      - '5000:5000/udp'
     deploy:
       replicas: 1
 
