--- a/site.yml
+++ b/site.yml
@@ -9,7 +9,7 @@
 - include: playbooks/install_ntp.yml
 - include: playbooks/install_docker.yml
 - include: playbooks/config_rsyslog.yml
-- include: playbooks/config_lvs.yml
+- include: playbooks/config_docker_lvs.yml
 - include: playbooks/start_docker.yml
 - include: playbooks/docker_post_config.yml
 - include: playbooks/install_nfs_server.yml
@@ -18,6 +18,5 @@
 - include: playbooks/install_dtr_nodes.yml
 - include: playbooks/install_worker_nodes.yml
 - include: playbooks/install_elk.yml
-##- include: playbooks/config_monitoring.yml
 - include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
 - include: playbooks/config_simplivity_backups.yml
