--- a/site.yml
+++ b/site.yml
@@ -18,5 +18,6 @@
 - include: playbooks/install_dtr_nodes.yml
 - include: playbooks/install_worker_nodes.yml
 - include: playbooks/install_elk.yml
+- include: playbooks/install_cloudbees.yml
 - include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
-- include: playbooks/config_simplivity_backups.yml
+#- include: playbooks/config_simplivity_backups.yml
