--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+log_path=/root/ansible_logs/ansible.out
 host_key_checking = False
 retry_files_enabled = False
 callback_whitelist = profile_tasks
