--- a/playbooks/install_elk.yml
+++ b/playbooks/install_elk.yml
@@ -21,13 +21,6 @@
       with_fileglob:
          - /root/ansible-docker-ucp/files/elk/*
 
-    #- name: Installing packages
-    #  apt: name={{ item }} state=present update_cache=yes
-    #  with_items:
-    #    - python-setuptools
-    #    - python-pip
-    #    - ansible
-
     # Installing elk stack
     - name: Installing docker compose
       shell: curl -L https://github.com/docker/compose/releases/download/{{ compose_ver }}/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
@@ -54,32 +47,41 @@
     - name: execute compose file
       shell: /usr/local/bin/docker-compose -f /root/elk-docker-compose.yml up -d
 
-- hosts: worker
-  become: yes
-  vars:
-    compose_ver: 1.15.0
-  
-  vars_files:
-    - ../group_vars/vars
-  
-  environment: "{{ env }}"
-
-  tasks:
-    - name: Copy config file
-      copy: src={{ item }} dest=/root
-      with_fileglob:
-         - /root/ansible-docker-ucp/files/elk/logspout-docker-compose.yml
-    
-    - name: Installing docker compose
-      shell: curl -L https://github.com/docker/compose/releases/download/{{ compose_ver }}/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
-
-    - name: change compose permission
-      file:
-         path: /usr/local/bin/docker-compose
-         mode: 0755
-
     - name: sleep for 3 min
       pause: minutes=3
 
-    - name: run logspout container
-      shell: /usr/local/bin/docker-compose -f /root/logspout-docker-compose.yml up -d
+- hosts: worker 
+  become: yes
+
+  vars_files:
+    - ../group_vars/vars
+
+  environment: "{{ env }}"
+
+  tasks:
+    - name: Install easy_install
+      yum:
+        name: python-setuptools
+        state: latest
+      changed_when: false
+
+    - name: Install PIP
+      easy_install:
+        name: pip
+        state: latest
+
+    - name: Ensure latest docker.py is installed
+      pip:
+        name: docker.py
+        state: latest
+      changed_when: false
+
+    - name: run logspout
+      docker:
+         name: logspout
+         image: bekt/logspout-logstash
+         env:
+           ROUTE_URIS: logstash://{{ hostvars['nm-elk']['ip_addr'] }}:5000
+         volumes:
+           - /var/run/docker.sock:/var/run/docker.sock
+         state: started
