Added new subscription playbook, and vault sample file, inclusive of new vmware certs variable

--- a/playbooks/config_networking.yml
+++ b/playbooks/config_networking.yml
@@ -17,6 +17,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password:  "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}" 
         vm_id: "{{ inventory_hostname }}"
         vm_username: "{{ vm_username }}"
         vm_password: "{{ vm_password }}"
@@ -29,6 +30,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password:  "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}" 
         vm_id: "{{ inventory_hostname }}"
         vm_username: "{{ vm_username }}"
         vm_password: "{{ vm_password }}"
@@ -41,6 +43,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password:  "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}" 
         vm_id: "{{ inventory_hostname }}"
         vm_username: "{{ vm_username }}"
         vm_password: "{{ vm_password }}"
@@ -53,6 +56,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password:  "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}" 
         vm_id: "{{ inventory_hostname }}"
         vm_username: "{{ vm_username }}"
         vm_password: "{{ vm_password }}"
@@ -65,6 +69,7 @@
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password:  "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}" 
         vm_id: "{{ inventory_hostname }}"
         vm_username: "{{ vm_username }}"
         vm_password: "{{ vm_password }}"
