--- a/playbooks/create_vms.yml
+++ b/playbooks/create_vms.yml
@@ -33,6 +33,7 @@
         vcenter_hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}"
         guest: "{{ inventory_hostname }}"
         state: reconfigured
         vm_disk:
