--- a/playbooks/power_on_guests.yml
+++ b/playbooks/power_on_guests.yml
@@ -17,6 +17,7 @@
         vcenter_hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
+        validate_certs: "{{ vcenter_validate_certs }}"
         guest: "{{ inventory_hostname }}"
         state: powered_on
 
