--- a/playbooks/install_ntp.yml
+++ b/playbooks/install_ntp.yml
@@ -25,21 +25,22 @@
   environment: "{{ env }}"
 
   tasks:
-    - name: Install NTP
-      yum:
-        name: ntp
-        state: latest
 
-    - name: Updating ntp.conf
+    - name: Update chrony.conf
       template:
-        src: ../templates/ntp.conf.j2
-        dest: /etc/ntp.conf
+        src: ../templates/chrony.conf.j2
+        dest: /etc/chrony.conf
         owner: root
         group: root
         mode: 0644        
+      notify: Enable and restart chrony service
 
-    - name: Enable and start NTP service
+    - name: use timedatectl
+      command: timedatectl set-ntp true
+
+  handlers:
+    - name: Enable and restart chrony service
       systemd:
-        name: ntpd
+        name: chronyd
         enabled: yes
-        state: started
+        state: restarted
