Site yml updated

--- a/site.yml
+++ b/site.yml
@@ -1,13 +1,14 @@
 ---
 # This playbook will create a Docker UCP environment
+# 16.11.2017 NPM
 
-#NM#- include: playbooks/create_vms.yml
-#NM#- include: playbooks/power_on_guests.yml
-#NM#- include: playbooks/config_networking.yml
+- include: playbooks/create_vms.yml
+- include: playbooks/power_on_guests.yml
+- include: playbooks/config_networking.yml
 #- include: playbooks/distribute_keys.yml # this step is optional; enabling it will allow for passwordless login between nodes
 #- include: playbooks/config_subscription.yml
-#NM#- include: playbooks/install_haproxy.yml
-#NM#- include: playbooks/install_ntp.yml
+- include: playbooks/install_haproxy.yml
+- include: playbooks/install_ntp.yml
 - include: playbooks/install_docker.yml
 - include: playbooks/config_rsyslog.yml
 - include: playbooks/config_docker_lvs.yml
@@ -21,5 +22,5 @@
 - include: playbooks/install_elk.yml
 - include: playbooks/install_cloudbees.yml
 - include: playbooks/install_playwithdocker.yml
-#- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
-#- include: playbooks/config_simplivity_backups.yml
+- include: playbooks/config_dummy_vms_for_docker_volumes_backup.yml
+- include: playbooks/config_simplivity_backups.yml
